fix: add margin and change alignment

--- a/style/style.css
+++ b/style/style.css
@@ -98,9 +98,6 @@ body {
 
 h1 {
     font-size: 18pt;
-    text-align: center;
-    margin-top: 50px;
-    margin-bottom: 70px;
 }
 
 .main-con {
